--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="e41fa3df-aadf-451a-87a7-ce17bb58d08e" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Portfolio of Adhithya" />
+    <meta property="og:description" content="ML and DL Learner" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
